# tincan-network

./: .gitignore  README.md
v1/: sitecmd
v1/client/cron/: sshlink  tincan
v1/client/etc/tincan/data/: group  server
v1/client/etc/tincan/sshlink/: backup.conf  primary.conf
v1/client/systemd/: tincan-heartbeat.service  tincan-heartbeat.timer  tincan-sshlink@.service  tincan-sshlink@.timer
v1/devel/backend/: .gitignore  .pylintrc  AUTHORS.rst  CHANGES  MANIFEST.in  Makefile  README  launcher  pyproject.toml  setup.cfg
v1/devel/backend/src/server/: __init__.py  commands.py  config.py  metadata.py  model.py  static
v1/devel/backend/src/server/migrations/versions/: 02d29903ec58_add_lat_and_lon.py  1bdacce1e3c8_add_host_ssh_port.py  5a40cde8362d_change_username_to_ssh_user.py  7f7d8aabaff9_add_label_to_node.py  92f5f1e7ad4c_rename_sshhost_to_ssh_host.py  a95ce91dc3ac_add_roles.py  bf19f533b765_add_tunnel_type.py  d70b93682e1b_add_sshhost.py  df18f54591a1_initial_version.py  f6a0508145bc_change_macaddr_to_uuid.py
v1/devel/backend/src/server/pages/: hello.rst
v1/devel/backend/src/server/routes/: admin.py  admin_required.py  api.py  auth.py  history.py  main.py  mesh.py  socket.py  util.py
v1/devel/backend/src/server/routes/sql/: get_radar.sql  get_radar_full.sql  get_tracks.sql  get_truth.sql  get_truth_flights.sql
v1/devel/backend/src/server/routes/templates/auth/: activate.html  activate.txt  creation_notify.html  creation_notify.txt  password.html  password.txt  username.html  username.txt  welcome.html  welcome.txt
v1/devel/frontend/: .env  Makefile  index.html  local.pp  local.te  package-lock.json  package.json  postcss.config.js  vite.config.js
v1/devel/frontend/public/assets/: scene.gltf
v1/devel/frontend/src/: index.css  index.js  index.jsx  program.jsx  setupProxy.js  styles.js
v1/devel/frontend/src/app/: app.js  app.js.org  app.jsx  auth.js  footer.js  footer.jsx  footer.module.css  header.js  header.jsx  header.module.css  layout.js.org  layout.jsx  layout.module.css  links.js  logo.js  navbar.js
v1/devel/frontend/src/app/auth/: authcontext.js  authprovider.jsx  index.js
v1/devel/frontend/src/app/pages/: index.js
v1/devel/frontend/src/app/pages/about/: StationMap.js  home.js  index.js  instrument.js  science.js  sites.js
v1/devel/frontend/src/app/pages/auth/: AuthLayout.js  ForgotPasswordPage.js  ForgotUsernamePage.js  LoginPage.js  LoginPage.jsx  LogoutPage.js  LogoutPage.jsx  ResetPasswordPage.js  SignupPage.js  index.js  page.css
v1/devel/frontend/src/app/pages/contacts/: contacts.js
v1/devel/frontend/src/app/pages/dashboard/: InstrumentRedirect.js  index.js  (+2 more)
v1/devel/frontend/src/app/pages/dashboard.org/: GetElapsed.js  Home.js  InstrumentView.js  InstrumentViewRedirect.js  StationList.js  StationMap.js  index.js
v1/devel/frontend/src/services/: admin.service.js  api.service.js  auth.service.js  index.js
v1/devel/frontend/src/store/: store.js
v1/devel/frontend/src/store/model/: admin.model.js  auth.model.js  clock.model.js  data.model.js  flight.model.js  index.js  mesh.model.js  ui.model.js
v1/devel/frontend/src/support/actions/: alert.actions.js  index.js  user.actions.js
v1/devel/frontend/src/support/components/: index.js  sortable_table.jsx
v1/devel/frontend/src/support/helpers/: fetch_wrapper.js  index.js  multiprovider.js  multiprovider.jsx  print_kit.js  range.js  repeat.js  validate.js
v1/prod/: Makefile  list_sshkeys
(+8 files in other folders)
